ALL the bug fixes

--- a/src/main/resources/assets/soundmuffler++/textures/lang/en_US.lang
+++ b/src/main/resources/assets/soundmuffler++/textures/lang/en_US.lang
@@ -9,6 +9,8 @@ tooltip.search=Search
 tooltip.back=Back
 tooltip.select=Select
 tooltip.preview=Preview
+tooltip.search=Search
+tooltip.history=History
 
 # Block
 tile.soundMuffler.name=Sound Muffler
